methods.returning.MethodsReturning.scala.code
def VuBiscuit(){
  if (estSurBiscuit()==true){
    return (true)
  }else{
    return (false)
  }
}
def haveBaggle():Boolean = {
  var n =0
  while (VuBiscuit()==false){
    for (n<- 1 to 6){
      avance()
    }
    for (n<- 1 to 6){
      recule()
      return vuBiscuit()
    }
  }

}